# talktally

./: .gitignore  AGENTS.md  README.md  launcher.py  pyproject.toml  talktally.spec
src/talktally/: dictation.py  gui.py  recorder.py  recording_transcriber.py  test.py
src/talktally/common/: encoding.py  fs.py  settings.py  transcription.py
tests/: test_dictation_settings.py  test_filename_prefix.py  test_fs_utils.py  test_hotkey.py  test_recording_transcriber.py  test_settings_persistence.py  test_transcription_features.py
